BUG: Use the Integer.valueOf() method to read year, month and date instead of instantiating an Integer object:solved